--- a/html/login.html
+++ b/html/login.html
@@ -8,13 +8,13 @@
     <title>Inicio de sesión</title>
 
     <!-- Bootstrap -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 	<link href=".././css/login.css" rel="stylesheet">
 
 
   </head>
   <body >
-  
+
 	 <div class="modal-dialog">
 				<div class="loginmodal-container">
 					<h1 >Ingreso de cuenta</h1><br>
@@ -23,16 +23,14 @@
 					<input type="password" name="pwd" placeholder="Contraseña">
 					<input type="submit" name="btnLogin" class="login loginmodal-submit" value="Ingresar">
 				  </form>
-					
+
 				  <div class="login-help">
 			<!--		<center><a href="#">¿Olvidaste la contraseña?</a> </center> -->
 				  </div>
 				</div>
 			</div>
-		  
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+
+
+    <script src="../js/bootstrap.min.js"></script>
   </body>
 </html>
