--- a/html/mapa.html
+++ b/html/mapa.html
@@ -7,10 +7,10 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Mapa de parqueadero</title>
         <!-- Bootstrap -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        
+        <link href="../bootstrap/css/bootstrap.min.js" rel="stylesheet">
+
         <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-		
+
 		<link href="../css/map.css" rel="stylesheet">
     </head>
     <body>
@@ -22,7 +22,7 @@
                 <center><img id="img0" src="../img/mapa/mapaPoli.jpg" alt="Mapa De las zonas de parqueo" width="95%" height="400"></center>
             </div>
             <br>
-            <div> 
+            <div>
 			<center>
                 <img id="img1" src="../img/mapa/SeccionA.png" alt="Zona A" width="150" height="100">
                 <img id="img2" src="../img/mapa/SeccionC.png" alt="Zona C" width="150" height="100">
@@ -33,7 +33,7 @@
                 <img id="img7" src="../img/mapa/SeccionG.png" alt="Zona G" width="150" height="100">
 			</center>
             </div>
-            
+
             <!-- The Modal -->
             <div id="myModal" class="modal">
               <span class="close">Close</span>
@@ -109,4 +109,3 @@
         </script>
     </body>
 </html>
-
