--- a/html/menu_admin.html
+++ b/html/menu_admin.html
@@ -21,7 +21,7 @@
           <span class="right title"><span class="arrow-right"></span>Registro de usuario</span>
         </a>
 
-      <a href="#" class="btn right">
+      <a href="../php/search.php" class="btn right">
         <span class="left title"><span class="arrow-left"></span>Consultar</span>
         <span class="right icon icon-gear"></span>
       </a>
