--- a/html/registroEntrada.html
+++ b/html/registroEntrada.html
@@ -21,21 +21,21 @@
 				  <form name="registroEntrada" method="POST" action="../php/registroEntrada.php">
 					<input type="text" name="usr" id="usr" placeholder="Identificación de la persona">
 					<input type="password" name="pwd" id="pwd" placeholder="Placa">
-          <label for="sel1"><center><font color="white">Entrada</font></center></label>
+      <center>    <label for="sel1"><font color="white">Entrada</font></label></center>
           <select class="form-control" id="sel1" name="sitio">
             <option value="vegas">vegas</option>
             <option value="regional1">regional1</option>
             <option value="regional2">regional2</option>
           </select>
           <br>
-          <label for="sel1"><center><font color="white">Tipo de vehículo</font></center></label>
+        <center>  <label for="sel1"><font color="white">Tipo de vehículo</font></label></center>
 
           <select class="form-control" id="sel1" name="vehiculo">
             <option value="carro">carro</option>
             <option value="moto">moto</option>
           </select>
           <br>
-          <input type="button" class="login loginmodal-submit" value="Registrar entrada" onclick="validacion()" />
+        <center>  <input type="button" class="login loginmodal-submit" value="    Registrar entrada   " onclick="validacion()" /></cenetr>
 
 				  </form>
 
