--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
-	<link href=".././css/login.css" rel="stylesheet">
+	<link href="../css/login.css" rel="stylesheet">
 
 
   </head>
@@ -21,7 +21,7 @@
 				  <form name="frmLogin" method="POST" action="../php/login.php">
 					<input type="text" name="usr" id="usr" placeholder="Usuario">
 					<input type="password" name="pwd" id="pwd" placeholder="Contraseña">
-          <input type="button" class="login loginmodal-submit" value="Ingresar" onclick="validacion()" />
+        <center>  <input type="button" class="login loginmodal-submit" value="      Ingresar      " onclick="validacion()" /></center>
 
 				  </form>
 
