--- a/html/registroEntrada.html
+++ b/html/registroEntrada.html
@@ -20,7 +20,7 @@
 					<h1 >Ingreso de entrada</h1><br>
 				  <form name="registroEntrada" method="POST" action="../php/registroEntrada.php">
 					<input type="text" name="usr" id="usr" placeholder="Identificación de la persona">
-					<input type="password" name="pwd" id="pwd" placeholder="Placa">
+					<input type="text" name="pwd" id="pwd" placeholder="Placa">
       <center>    <label for="sel1"><font color="white">Entrada</font></label></center>
           <select class="form-control" id="sel1" name="sitio">
             <option value="vegas">vegas</option>
